# selene

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  PLUGIN TODO.md  README.md  contributing.html  index.html  luacheck.html  motivation.html  print.html  pyproject.toml  roblox.html  roblox.yml  searchindex.js  searchindex.json  selene.html  toc.html  toc.js
luacheck2/: Cargo.toml
luacheck2-lib/: Cargo.toml
luacheck2-lib/default_std/: lua51.toml  lua52.toml
luacheck2-lib/src/: lib.rs  rules.rs  standard_library.rs
luacheck2-lib/src/ast_util/: mod.rs  scopes.rs  side_effects.rs
luacheck2-lib/src/rules/: almost_swapped.rs  divide_by_zero.rs  empty_if.rs  global_usage.rs  ifs_same_cond.rs  multiple_statements.rs  shadowing.rs  standard_library.rs  suspicious_reverse_loop.rs  test_util.rs  unbalanced_assignments.rs  undefined_variable.rs  unused_variable.rs
luacheck2-lib/tests/: checker.rs
luacheck2-lib/tests/lints/almost_swapped/: almost_swapped.lua
luacheck2-lib/tests/lints/divide_by_zero/: divide_by_zero.stderr
luacheck2-lib/tests/lints/empty_if/: empty_if_comments.lua
luacheck2-lib/tests/lints/global_usage/: global_usage.lua  global_usage.stderr
luacheck2-lib/tests/lints/ifs_same_cond/: ifs_same_cond.stderr
luacheck2-lib/tests/lints/multiple_statements/: multiple_statements.lua  one_line_if_allow.lua  one_line_if_break_return_only.lua  one_line_if_break_return_only.stderr  one_line_if_deny.lua
luacheck2-lib/tests/lints/shadowing/: shadowing.lua  shadowing.stderr
luacheck2-lib/tests/lints/standard_library/: any.lua  any.std.toml  bad_call_signatures.lua  bad_call_signatures.stderr  complex.lua  constants.lua  constants.stderr  method_call.lua  method_call.stderr  shadowing.stderr  vararg.lua  wildcard.lua  wildcard.std.toml  wildcard.stderr  wildcard_structs.lua  wildcard_structs.std.toml  wildcard_structs.stderr  writing.stderr
luacheck2-lib/tests/lints/suspicious_reverse_loop/: suspicious_reverse_loop.lua
luacheck2-lib/tests/lints/undefined_variable/: basic.lua  basic.stderr  self.lua  shadowing.lua
luacheck2-lib/tests/lints/unused_variable/: blocks.lua  blocks.stderr  edge_cases.lua  edge_cases.stderr  generic_for_shadowing.lua  if.lua  if.stderr  ignore.lua  locals.stderr  overriding.stderr  self.stderr  self_ignored.lua  shadowing.lua  varargs.lua  varargs.stderr
luacheck2/src/: lib.rs  main.rs  rules.rs
luacheck2/src/rules/: empty_if.rs  test_util.rs
luacheck2/tests/: checker.rs
luacheck2/tests/lints/empty_if/: empty_if.lua  empty_if.stderr  empty_if_comments.stderr
selene/: Cargo.toml
selene-lib/: Cargo.toml
selene-lib/default_std/: lua51.toml  lua51.yml  lua52.toml  lua52.yml  lua53.toml  lua53.yml  luau.yml  roblox_base.yml
selene-lib/src/: lib.rs  lint_filtering.rs  lints.rs  logs.rs  possible_std.rs  rules.rs  standard_library.rs  test_full_runs.rs  test_util.rs  text.rs  util.rs
selene-lib/src/ast_util/: depth_tracker.rs  extract_static_token.rs  loop_tracker.rs  mod.rs  name_paths.rs  purge_trivia.rs  scopes.rs  side_effects.rs  strip_parentheses.rs  visit_nodes.rs
selene-lib/src/lints/: almost_swapped.rs  approx_constant.rs  approximated_constants.rs  bad_string_escape.rs  compare_nan.rs  constant_table_comparison.rs  deprecated.rs  divide_by_zero.rs  duplicate_keys.rs  empty_if.rs  empty_loop.rs  global_usage.rs  high_cyclomatic_complexity.rs  if_same_then_else.rs  ifs_same_cond.rs  invalid_lint_filter.rs  manual_table_clone.rs  mismatched_arg_count.rs  mixed_table.rs  multiple_statements.rs  must_use.rs  parenthese_conditions.rs  restricted_imports.rs  restricted_module_paths.rs  roblox_complex_udim2_new.rs  roblox_incorrect_color3_new_bounds.rs  roblox_incorrect_react_usage.rs  roblox_incorrect_roact_usage.rs  roblox_manual_fromscale_or_fromoffset.rs  roblox_mismatched_udim2_new_arg_count.rs  roblox_react_exhaustive_deps.rs  roblox_roact_dangling_connection.rs  roblox_roact_exhaustive_deps.rs  roblox_roact_non_exhaustive_deps.rs  roblox_suspicious_udim2_new.rs  shadowing.rs  standard_library.rs  suspicious_reverse_loop.rs  test_util.rs  type_check_inside_call.rs  (+4 more)
selene-lib/src/plugins/: config.rs  context.rs  either.rs  github.rs  lockfile.rs  lua_methods.rs  lua_plugin.rs  mod.rs  scope_manager.rs  standard_library.rs
selene-lib/src/rules/: almost_swapped.rs  bad_string_escape.rs  compare_nan.rs  constant_table_comparison.rs  deprecated.rs  divide_by_zero.rs  duplicate_condition.rs  duplicate_keys.rs  empty_if.rs  global_usage.rs  high_cyclomatic_complexity.rs  if_same_then_else.rs  ifs_same_cond.rs  incorrect_roact_usage.rs  invalid_lint_filter.rs  limit_function_complexity.rs  mismatched_arg_count.rs  multiple_statements.rs  must_use.rs  parenthese_conditions.rs  roblox_incorrect_color3_new_bounds.rs  roblox_incorrect_roact_usage.rs  shadowing.rs  standard_library.rs  suspicious_reverse_loop.rs  test_util.rs  type_check_inside_call.rs  unbalanced_assignments.rs  undefined_variable.rs  unscoped_variables.rs  unused_variable.rs
selene-lib/src/standard_library/: lua_versions.rs  mod.rs  v1.rs  v1_upgrade.rs
selene-lib/tests/: checker.rs
selene-lib/tests/full_run/function_overriding/: function_overriding.lua  function_overriding.std.yml  function_overriding.stderr
selene-lib/tests/full_run/lint_filtering/: deny_allowed_in_config.lua  deny_allowed_in_config.stderr  just_comments.lua  just_comments.stderr  lint_filtering.lua  lint_filtering.stderr  manual_table_clone.lua  manual_table_clone.std.yml  manual_table_clone.stderr
selene-lib/tests/full_run/plugins/: block_table_calls.selene.toml  block_table_calls_plugin.lua
selene-lib/tests/full_run/std_mistakes/: roblox_mistakes.lua  roblox_mistakes.stderr  std_mistakes.lua  std_mistakes.noroblox.stderr  std_mistakes.stderr
selene/src/: capabilities.rs  json_output.rs  logger.rs  main.rs  opts.rs  plugins.rs  roblox.rs  standard_library.rs  upgrade_std.rs  validate_config.rs
selene/src/roblox/: api.rs  base.toml  base.yml  collect_std.rs  generate_std.rs  mod.rs
(+494 files in other folders)
