[workspace]

members = ["selene", "selene-lib"]

[workspace.package]
version = "0.23.1"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2021"
homepage = "https://kampfkarren.github.io/selene/"
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/selene"

[workspace.dependencies]
full_moon = "0.17.0"
