[workspace]
members = ["selene", "selene-lib"]
resolver = "2"

[workspace.package]
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2021"
homepage = "https://kampfkarren.github.io/selene/"
license = "MPL-2.0"
repository = "https://github.com/Kampfkarren/selene"
version = "0.28.0"

[workspace.dependencies]
full_moon = "2.0.0"
toml = "0.7.2"

# Do not update this without confirming profiling uses the same version of tracy-client as selene
profiling = "1.0.7"
