[build-system]
requires = ["release-gitter[builder]"]
build-backend = "pseudo_builder"

[tool.release-gitter]
git-url = "https://github.com/Kampfkarren/selene"
extract-files = ["selene"]
destination = "bin"
format = "selene-{version}-{system}.zip"
exec = "chmod +x bin/selene"

[tool.release-gitter.map-system]
Darwin = "macos"
Windows = "windows"
Linux = "linux"