[package]
name = "luacheck2-lib"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2018"

[dependencies]
codespan = "0.4"
codespan-reporting = "0.4"
full_moon = "0.4.0-rc.11"
id-arena = "2.2"
if_chain = "1.0"
lazy_static = "1.4"
regex = "1"
serde = "1.0"
toml = "0.5"

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "0.6"
termcolor = "1.0"

[features]
roblox = []