[package]
name = "luacheck2"
version = "0.1.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2018"

[dependencies]
codespan = "0.4"
codespan-reporting = "0.4"
full_moon = "0.4.0-rc.5"
lazy_static = "1.4"
serde = "1.0"

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "0.6"
termcolor = "1.0"