[package]
name = "luacheck2"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
codespan = "0.4"
codespan-reporting = "0.4"
full_moon = "0.4.0-rc.6"
glob = "0.3"
log = "0.4"
luacheck2-lib = { path = "../luacheck2-lib" }
simple_logger = { version = "1.0", features = ["colored"] }
termcolor = "1.0"
toml = "0.5"