[package]
name = "luacheck2"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
codespan = "0.4"
codespan-reporting = "0.4"
full_moon = "0.4.0-rc.11"
glob = "0.3"
luacheck2-lib = { path = "../luacheck2-lib" }
num_cpus = "1.10"
termcolor = "1.0"
threadpool = "1.7"
toml = "0.5"