[package]
name = "selene-lib"
version.workspace = true
license.workspace = true
authors.workspace = true
description = "A library for linting Lua code. You probably want selene instead."
categories = ["command-line-utilities"]
keywords = ["lua", "linter", "lua51"]
repository.workspace = true
edition.workspace = true

[dependencies]
codespan = "0.9.5"
codespan-reporting = "0.9.5"
dirs.workspace = true
eyre = "0.6.8"
full-moon-lua-types.workspace = true
full_moon.workspace = true
id-arena = "2.2"
if_chain = "1.0.2"
lazy_static = "1.4"
mlua = { version = "0.8.3", features = ["luau", "send"] }
once_cell = "1.12.0"
paste = "1.0.9"
profiling = "1.0.6"
regex = "1.6.0"
serde = "1.0.144"
serde_yaml = "0.8.24"
sha2 = "0.10.6"
toml = "0.5.9"
tracing = "0.1.37"
ureq = "2.5.0"
zip = { version = "0.6.3", features = ["deflate"], default-features = false }

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "0.6"
termcolor = "1.0"

[features]
default = ["roblox"]
force_exhaustive_checks = []
roblox = ["full_moon/roblox", "full-moon-lua-types/luau"]
