[package]
name = "selene-lib"
version.workspace = true
license.workspace = true
authors.workspace = true
description = "A library for linting Lua code. You probably want selene instead."
categories = ["command-line-utilities"]
keywords = ["lua", "linter", "lua51"]
repository.workspace = true
edition.workspace = true

[dependencies]
codespan = "0.11"
codespan-reporting = "0.11"
full_moon.workspace = true
id-arena = "2.2"
if_chain = "1.0.2"
lazy_static = "1.4"
once_cell = "1.17.0"
paste = "1.0.11"
profiling.workspace = true
regex = "1.7.1"
serde = "1.0.152"
serde_yaml = "0.9.16"
toml.workspace = true

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.3"
termcolor = "1.2"

[features]
default = ["lua52", "lua53", "lua54", "luajit", "roblox"]
force_exhaustive_checks = []

lua52 = ["full_moon/lua52"]
lua53 = ["full_moon/lua53"]
lua54 = ["full_moon/lua54"]
luajit = ["full_moon/luajit"]
roblox = ["full_moon/roblox"]
