[package]
authors.workspace = true
categories = ["command-line-utilities"]
description = "A blazing-fast modern Lua linter written in Rust"
documentation = "https://kampfkarren.github.io/selene/"
edition.workspace = true
keywords = ["lua", "linter", "lua51"]
license.workspace = true
name = "selene"
repository.workspace = true
version.workspace = true

[dependencies]
atty = "0.2"
cfg-if = "1.0"
chrono = "0.4"
codespan = { version = "0.11", features = ["serialization"] }
codespan-reporting = { version = "0.11", features = ["serialization"] }
color-eyre = "0.6.2"
dirs = "4.0.0"
full_moon.workspace = true
glob = "0.3"
globset = "0.4.10"
lazy_static = "1.4"
num_cpus = "1.15"
profiling.workspace = true
selene-lib = { path = "../selene-lib", version = "=0.29.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.16"
structopt = "0.3"
termcolor = "1.2"
# Do not update this without confirming profiling uses the same version
threadpool = "1.8"
toml.workspace = true
tracy-client = { version = "0.14.1", optional = true }
ureq = { version = "2.6.2", features = ["json"], optional = true }

[dev-dependencies]
pretty_assertions = "1.3"

[features]
default = ["roblox"]
roblox = ["selene-lib/roblox", "full_moon/roblox", "ureq"]
tracy-profiling = ["profiling/profile-with-tracy", "tracy-client"]
